v18.2/2.框架中开发/7.NuxtJS.md
# nuxtjs

SpreadJS支持NuxtJS，这是一个用于创建Web应用程序的VueJS框架。NuxtJS使开发变得轻松、快速且有序。NuxtJS与React.js的框架NextJS颇为相似。NuxtJS的一些实用功能包括文件夹结构、服务器端渲染、静态渲染和代码拆分。
如需更多信息，请参考[https://nuxtjs.org/docs/get-started/installation](https://nuxtjs.org/docs/get-started/installation)。
在本教程中，我们将构建一个使用SpreadJS的**Nuxt.js**应用程序。

## Vue2

### 创建Nuxt.js应用程序

创建Nuxt.js应用程序最简单的方法是使用Create Nuxt App工具。

1. 从命令提示符或终端运行以下命令来创建一个Nuxt.js项目。

    ```Shell
    npx create-nuxt-app nuxt2WithSJS
    ```

    当终端提示配置消息时，选择所需的选项并按回车键确认。稍等片刻，终端会安装并创建项目。它会询问你几个问题，以下是可供参考的回答：

    ```yaml
    Project language: JavaScript
    Project manager: Npm
    UI framework: None
    Template engine: HTML
    Nuxt.js modules: Axios
    Linting tools: ESLint
    Testing framework: None
    Rendering mode: Single Page App
    Deployment target: Static
    Development tools: jsconfig.json
    Continuous integration: None
    Version control system: Git
    ```
2. 在终端中输入以下命令。

    ```Shell
    cd nuxt2WithSJS
    npm run dev
    ```
3. 使用浏览器打开以下链接。然后你将看到NuxtJS的欢迎页面。
    http://localhost:3000/
4. 关闭当前终端。使用Visual Studio Code或其他集成开发环境打开nuxtjs-with-spreadjs文件夹。

### 安装SpreadJS

1. 安装SpreadJS包。

    ```Shell
    npm install --save @grapecity-software/spread-sheets-vue
    ```

    如果应用程序的根文件夹中不存在名为components的文件夹，则创建一个。
2. 创建一个JavaScript XML文件SpreadSheet.vue，并将其添加到components文件夹中，内容如下。你可以在初始化组件之前输入有效的SpreadJS许可证密钥。

    ```HTML
    <template>
    <div>
        <gc-spread-sheets :hostClass='hostClass'>
            <gc-worksheet :dataSource="dataTable">
                <gc-column :width="width" :dataField="'preferredFullName'"></gc-column>
                <gc-column :width="width" :dataField="'jobTitleName'"></gc-column>
                <gc-column :width="width" :dataField="'phoneNumber'"></gc-column>
                <gc-column :width="width" :dataField="'region'"></gc-column>
            </gc-worksheet>
        </gc-spread-sheets>
    </div>
    </template>
    
    <script>
    import '@grapecity-software/spread-sheets/styles/gc.spread.sheets.excel2016colorful.css'
    import '@grapecity-software/spread-sheets-vue'
    import * as GC from "@grapecity-software/spread-sheets";
    
    // Licensing SpreadJS
    var SpreadJSKey = "xxx";          // Enter a valid license key.
    GC.Spread.Sheets.LicenseKey = SpreadJSKey;
    
    export default {
        data() {
            return {
                hostClass: 'spread-host',
                width: 100
            }
        },
        computed: {
            dataTable() {
                return [{
                        "jobTitleName": "Developer",
                        "preferredFullName": "Romin Irani",
                        "region": "CA",
                        "phoneNumber": "408-1234567"
                    },
                    {
                        "jobTitleName": "Developer",
                        "preferredFullName": "Neil Irani",
                        "region": "CA",
                        "phoneNumber": "408-1111111"
                    },
                    {
                        "jobTitleName": "Program Directory",
                        "preferredFullName": "Tom Hanks",
                        "region": "CA",
                        "phoneNumber": "408-2222222"
                    }
                ];
            }
        }
    }
    </script>
    
    <style scoped>
    .spread-host {
        width: 600px;
        height: 600px;
    }
    </style>
    ```
3. 更改index文件内容。将pages\\index.tsx文件的默认内容替换为以下代码。

    ```typescript
    <template>
    <div>
        <h1>
            Adding Spreadsheets to a Jamstack Application
        </h1>
        <p>
            Nuxt.JS v2 + SpreadJS demo
        </p>
        <SpreadSheet />
    </div>
    </template>
    ```

### 运行并测试应用程序

你可以使用npm run dev命令运行该应用程序。默认情况下，项目在http://localhost:3000/运行。

## Vue3

### 创建Nuxt.js应用程序

创建Nuxt.js应用程序最简单的方法是使用Create Nuxt App工具。

1. 从命令提示符或终端运行以下命令来创建一个Nuxt.js项目。

    ```Shell
    npx nuxi init nuxt3WithSJS
    ```
2. 在终端中输入以下命令。

    ```Shell
    cd nuxt3WithSJS
    npm install
    npm run dev
    ```
3. 使用浏览器打开以下链接。然后你将看到NuxtJS的欢迎页面。
    http://localhost:3000/
4. 关闭当前终端。使用Visual Studio Code或其他集成开发环境打开nuxtjs-with-spreadjs文件夹。

### 安装SpreadJS

1. 安装SpreadJS包。

    ```Shell
    npm install --save @grapecity-software/spread-sheets-vue
    ```

    如果应用程序的根文件夹中不存在名为components的文件夹，则创建一个。
2. 创建一个JavaScript XML文件SpreadSheet.vue，并将其添加到components文件夹中，内容如下。你可以在初始化组件之前输入有效的SpreadJS许可证密钥。

    ```javascript
    <template>
    <div>
        <gc-spread-sheets :hostClass='hostClass'>
            <gc-worksheet :dataSource="dataTable">
                <gc-column :width="width" :dataField="'preferredFullName'"></gc-column>
                <gc-column :width="width" :dataField="'jobTitleName'"></gc-column>
                <gc-column :width="width" :dataField="'phoneNumber'"></gc-column>
                <gc-column :width="width" :dataField="'region'"></gc-column>
            </gc-worksheet>
        </gc-spread-sheets>
    </div>
    </template>
    
    <script>
    import '@grapecity-software/spread-sheets/styles/gc.spread.sheets.excel2016colorful.css'
    import {
        GcSpreadSheets,
        GcWorksheet,
        GcColumn
    } from '@grapecity-software/spread-sheets-vue'
    
    import * as GC from "@grapecity-software/spread-sheets";
    
     // Licensing SpreadJS
     var SpreadJSKey = "xxx";          // Enter a valid license key.
     GC.Spread.Sheets.LicenseKey = SpreadJSKey;
    
    export default {
        components: {
            GcSpreadSheets, GcWorksheet, GcColumn
        },
        data() {
            return {
                hostClass: 'spread-host',
                width: 100
            }
        },
        computed: {
            dataTable() {
                return [{
                        "jobTitleName": "Developer",
                        "preferredFullName": "Romin Irani",
                        "region": "CA",
                        "phoneNumber": "408-1234567"
                    },
                    {
                        "jobTitleName": "Developer",
                        "preferredFullName": "Neil Irani",
                        "region": "CA",
                        "phoneNumber": "408-1111111"
                    },
                    {
                        "jobTitleName": "Program Directory",
                        "preferredFullName": "Tom Hanks",
                        "region": "CA",
                        "phoneNumber": "408-2222222"
                    }
                ];
            }
        }
    }
    </script>
    
    <style scoped>
    .spread-host {
        width: 600px;
        height: 600px;
    }
    </style>
    ```
3. 将app.vue文件的默认内容替换为以下代码。

    ```typescript
    <template>
    <div>
        <h1>
            Adding Spreadsheets to a Jamstack Application
        </h1>
        <p>
            Nuxt.JS v3 + SpreadJS demo
        </p>
        <SpreadSheet />
    </div>
    </template>
    ```
4. 按如下所示更改nuxt.config.ts文件：

    ```typescript
    // https://nuxt.com/docs/api/configuration/nuxt-config
    export default defineNuxtConfig({
        ssr: false,
        components: true
    })
    ```

### 运行并测试应用程序

你可以使用npm run dev命令运行该应用程序。默认情况下，项目在http://localhost:3000/运行。